# cpp_AV

./: CMakeLists.txt  all.sh  build.sh  configure.sh  erase.sh  main.cpp  read_md.cpp  read_md.hpp  run.sh
libs/FFmpeg/: CMakeLists.txt
src/: encode.cpp  encode.hpp  main.cpp  read_md.cpp  read_md.hpp
